--- a/Code/ShipWorks.Products.UI/packages.config
+++ b/Code/ShipWorks.Products.UI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.6.2" targetFramework="net46" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
   <package id="Syncfusion.Licensing" version="16.3.0.29" targetFramework="net46" />
