--- a/Code/ShipWorks.Products/ShipWorks.Products.csproj
+++ b/Code/ShipWorks.Products/ShipWorks.Products.csproj
@@ -65,6 +65,7 @@
     <PackageReference Include="log4net" Version="2.0.7" />
     <PackageReference Include="MvvmLightLibs" Version="5.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="RestSharp" Version="106.6.9" />
     <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.1.2" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="6.8.1.4648" />
     <PackageReference Include="Syncfusion.XlsIO.Base46" Version="16.1.0.26" />
