TP#36995: Update registrations so background process can process labels

--- a/Code/ShipWorks.Api/ShipWorks.Api.csproj
+++ b/Code/ShipWorks.Api/ShipWorks.Api.csproj
@@ -62,4 +62,7 @@
     <ProjectReference Include="..\ShipWorks.Data.Model\ShipWorks.Data.Model.csproj" />
     <ProjectReference Include="..\ShipWorks\ShipWorks.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms" />
+  </ItemGroup>
 </Project>
