TP#36995 fix units and build

--- a/Code/ShipWorks.Api.Tests/ShipWorks.Api.Tests.csproj
+++ b/Code/ShipWorks.Api.Tests/ShipWorks.Api.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <PackageId />
     <Version>1</Version>
