TP #37169: Create the One Balance settings control

--- a/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
+++ b/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
@@ -376,6 +376,9 @@
     </Compile>
     <Compile Include="Settings\BestRateAccountSettingsViewModel.cs" />
     <Compile Include="Settings\BestRateCarrier.cs" />
+    <Compile Include="Settings\OneBalance\OneBalanceSettingsControl.xaml.cs">
+      <DependentUpon>OneBalanceSettingsControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Settings\OneBalance\OneBalanceSettingsControlHost.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -818,6 +821,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="RatingPanel\RatingPanelControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Settings\OneBalance\OneBalanceSettingsControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
