TP #37169: Create the One Balance setting control view model

--- a/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
+++ b/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
@@ -385,6 +385,7 @@
     <Compile Include="Settings\OneBalance\OneBalanceSettingsControlHost.Designer.cs">
       <DependentUpon>OneBalanceSettingsControlHost.cs</DependentUpon>
     </Compile>
+    <Compile Include="Settings\OneBalance\OneBalanceSettingsViewModel.cs" />
     <Compile Include="ShippingPanel\CustomsControl\CustomsControl.xaml.cs">
       <DependentUpon>CustomsControl.xaml</DependentUpon>
     </Compile>
