--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -121,6 +121,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Reactive.Core, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Reactive.Core.3.1.1\lib\net46\System.Reactive.Core.dll</HintPath>
@@ -576,6 +577,11 @@
     <Compile Include="Services\ShippingProfileManagerWrapper.cs" />
     <Compile Include="Settings\ConfigurationShipmentTypeSetupWizard.cs" />
     <Compile Include="Settings\ShipmentTypeSetupWizardFactory.cs" />
+    <Compile Include="ShipEngine\DTOs\Registration\Address.cs" />
+    <Compile Include="ShipEngine\DTOs\Registration\IUpsRegistrationRequestFactory.cs" />
+    <Compile Include="ShipEngine\DTOs\Registration\UpsRegistrationRequest.cs" />
+    <Compile Include="ShipEngine\DTOs\Registration\UpsRegistrationRequestFactory.cs" />
+    <Compile Include="ShipEngine\DTOs\Registration\UpsRegistrationResponse.cs" />
     <Compile Include="ShipEngine\ICarrierShipmentRequestFactory.cs" />
     <Compile Include="ShipEngine\IShipEngineApiFactory.cs" />
     <Compile Include="ShipEngine\IShipEngineApiKey.cs" />
@@ -585,6 +591,7 @@
     <Compile Include="ShipEngine\IShipEngineResourceDownloader.cs" />
     <Compile Include="ShipEngine\IShipEngineTrackingResultFactory.cs" />
     <Compile Include="ShipEngine\IShipEngineWebClient.cs" />
+    <Compile Include="ShipEngine\IUpsCredentials.cs" />
     <Compile Include="ShipEngine\ShipEngineApiFactory.cs" />
     <Compile Include="ShipEngine\ShipEngineApiKey.cs" />
     <Compile Include="ShipEngine\ShipEngineContentsType.cs" />
@@ -598,6 +605,7 @@
     <Compile Include="ShipEngine\ShipEngineShipmentRequestFactory.cs" />
     <Compile Include="ShipEngine\ShipEngineTrackingResultFactory.cs" />
     <Compile Include="ShipEngine\ShipEngineWebClient.cs" />
+    <Compile Include="ShipEngine\UpsCredentials.cs" />
     <Compile Include="ShippingErrorManager.cs" />
     <Compile Include="Services\ShippingOriginManagerWrapper.cs" />
     <Compile Include="..\ShipWorks\Properties\AssemblyInfoCommon.cs">
