TP#37167: Create OneBalanceFinishPage and add it to the wizard.

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1176,6 +1176,12 @@
     <Compile Include="Shipping\Carriers\UPS\OneBalance\OneBalanceAccountAddressPage.Designer.cs">
       <DependentUpon>OneBalanceAccountAddressPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Shipping\Carriers\UPS\OneBalance\OneBalanceFinishPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Shipping\Carriers\UPS\OneBalance\OneBalanceFinishPage.Designer.cs">
+      <DependentUpon>OneBalanceFinishPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Shipping\Carriers\UPS\OneBalance\OneBalanceTermsAndConditionsPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -8426,6 +8432,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Shipping\Carriers\UPS\OneBalance\OneBalanceAccountAddressPage.resx">
       <DependentUpon>OneBalanceAccountAddressPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Shipping\Carriers\UPS\OneBalance\OneBalanceFinishPage.resx">
+      <DependentUpon>OneBalanceFinishPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Shipping\Carriers\UPS\OneBalance\OneBalanceTermsAndConditionsPage.resx">
       <DependentUpon>OneBalanceTermsAndConditionsPage.cs</DependentUpon>
