--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -399,9 +399,11 @@
     <Compile Include="Carriers\Postal\Usps\UspsShippingProfileApplicationStrategy.cs" />
     <Compile Include="Carriers\Postal\WebTools\PostalWebToolsShippingProfileApplicationStrategy.cs" />
     <Compile Include="Carriers\Ups\IUpsRateClientFactory.cs" />
+    <Compile Include="Carriers\Ups\IUpsShipEngineRatingService.cs" />
     <Compile Include="Carriers\Ups\OneBalance\OneBalanceUpsAccountRegistrationActivity.cs" />
     <Compile Include="Carriers\Ups\UpsRateClientFactory.cs" />
-    <Compile Include="Carriers\Ups\UpsShipEngineRateClient.cs" />
+    <Compile Include="Carriers\Ups\UpsShipEngineRatingService.cs" />
+    <Compile Include="Carriers\Ups\UpsShipmentRequestFactory.cs" />
     <Compile Include="Carriers\Ups\UpsShippingProfileApplicationStrategy.cs" />
     <Compile Include="Insurance\IInsuranceBehaviorChangeDialog.cs" />
     <Compile Include="Profiles\ProfileAppliedPipeline.cs" />
