TP#37173 create UpsShipEngineLabelClient and UpsLabelClientFactory

--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -401,7 +401,10 @@
     <Compile Include="Carriers\Ups\IUpsLabelClient.cs" />
     <Compile Include="Carriers\Ups\IUpsLabelClientFactory.cs" />
     <Compile Include="Carriers\Ups\OneBalance\OneBalanceUpsAccountRegistrationActivity.cs" />
+    <Compile Include="Carriers\Ups\OneBalance\UpsShipEngineLabelClient.cs" />
+    <Compile Include="Carriers\Ups\UpsLabelClientFactory.cs" />
     <Compile Include="Carriers\Ups\UpsOltLabelClient.cs" />
+    <Compile Include="Carriers\Ups\UpsShipEngineDownloadedLabelData.cs" />
     <Compile Include="Carriers\Ups\UpsShippingProfileApplicationStrategy.cs" />
     <Compile Include="Insurance\IInsuranceBehaviorChangeDialog.cs" />
     <Compile Include="Profiles\ProfileAppliedPipeline.cs" />
