TP#37173 fix broken units

--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -399,18 +399,18 @@
     <Compile Include="Carriers\Postal\Usps\UspsShippingProfileApplicationStrategy.cs" />
     <Compile Include="Carriers\Postal\WebTools\PostalWebToolsShippingProfileApplicationStrategy.cs" />
     <Compile Include="Carriers\Ups\IUpsRateClientFactory.cs" />
-    <Compile Include="Carriers\Ups\IUpsShipEngineRatingService.cs" />
+    <Compile Include="Carriers\Ups\ShipEngine\IUpsShipEngineRatingService.cs" />
     <Compile Include="Carriers\Ups\IUpsLabelClient.cs" />
     <Compile Include="Carriers\Ups\IUpsLabelClientFactory.cs" />
     <Compile Include="Carriers\Ups\OneBalance\OneBalanceUpsAccountRegistrationActivity.cs" />
     <Compile Include="Carriers\Ups\UpsRateClientFactory.cs" />
-    <Compile Include="Carriers\Ups\UpsShipEngineRatingService.cs" />
-    <Compile Include="Carriers\Ups\OneBalance\UpsShipEngineLabelClient.cs" />
-    <Compile Include="Carriers\Ups\OneBalance\UpsShipEngineTranslation.cs" />
+    <Compile Include="Carriers\Ups\ShipEngine\UpsShipEngineRatingService.cs" />
+    <Compile Include="Carriers\Ups\ShipEngine\UpsShipEngineLabelClient.cs" />
+    <Compile Include="Carriers\Ups\ShipEngine\UpsShipEngineTranslation.cs" />
     <Compile Include="Carriers\Ups\OneBalance\UpsShipmentRequestFactory.cs" />
     <Compile Include="Carriers\Ups\UpsLabelClientFactory.cs" />
     <Compile Include="Carriers\Ups\UpsOltLabelClient.cs" />
-    <Compile Include="Carriers\Ups\UpsShipEngineDownloadedLabelData.cs" />
+    <Compile Include="Carriers\Ups\ShipEngine\UpsShipEngineDownloadedLabelData.cs" />
     <Compile Include="Carriers\Ups\UpsShippingProfileApplicationStrategy.cs" />
     <Compile Include="Insurance\IInsuranceBehaviorChangeDialog.cs" />
     <Compile Include="Profiles\ProfileAppliedPipeline.cs" />
