--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -272,7 +272,9 @@
     <Compile Include="Net\IHttpRequestSubmitter.cs" />
     <Compile Include="Net\IHttpVariableCollection.cs" />
     <Compile Include="Net\IHttpVariableRequestSubmitter.cs" />
+    <Compile Include="Net\IRestRequestFactory.cs" />
     <Compile Include="Net\IWebHelper.cs" />
+    <Compile Include="Net\RestRequestFactory.cs" />
     <Compile Include="Net\WebHelperWrapper.cs" />
     <Compile Include="Pdf\IPdfDocument.cs" />
     <Compile Include="Pdf\IPdfDocumentFactory.cs" />
