TP#37669: Rename UspsLabelResponse and UspsDownloadedLabelData to StampsLabelResponse and StampsDownloadedLabelData.

--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -432,7 +432,7 @@
     <Compile Include="Carriers\Postal\Usps\UspsPrefetchProvider.cs" />
     <Compile Include="Carriers\Postal\Usps\RateFootnotes\Discounted\UspsRateDiscountedFootnoteViewModel.cs" />
     <Compile Include="Carriers\Postal\Usps\RateFootnotes\Promotion\UspsRatePromotionFootnoteViewModel.cs" />
-    <Compile Include="Carriers\Postal\Usps\UspsDownloadedLabelData.cs" />
+    <Compile Include="Carriers\Postal\Usps\StampsDownloadedLabelData.cs" />
     <Compile Include="Carriers\Postal\PostalShipmentDateManipulator.cs" />
     <Compile Include="Carriers\Postal\Usps\UspsShipmentPackageTypesBuilder.cs" />
     <Compile Include="Carriers\Postal\Usps\UspsShipmentAdapter.cs" />
