--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Carriers\Dhl\DhlExpressShipEngineLabelClient.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressShipmentServicesBuilder.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressShippingProfileApplicationStrategy.cs" />
+    <Compile Include="Carriers\Dhl\DhlExpressStampsLabelClient.cs" />
     <Compile Include="Carriers\Dhl\IDhlExpressLabelClient.cs" />
     <Compile Include="Carriers\Dhl\IDhlExpressStampsWebClient.cs" />
     <Compile Include="Carriers\FedEx\Api\FedExOpenShipGateway.cs" />
