--- a/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
+++ b/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Carriers\DhlExpress\DhlExpressLabelServiceTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressPackageAdapterTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressRateHashingServiceTest.cs" />
+    <Compile Include="Carriers\DhlExpress\DhlExpressShipEngineLabelClientTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressShipmentRequestFactoryTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressRatingServiceTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressShipmentServiceBuilderTest.cs" />
