--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -221,21 +221,21 @@
     <Compile Include="Carriers\BestRate\Footnote\BrokerExceptionsRateFootnoteViewModel.cs" />
     <Compile Include="Carriers\BestRate\Footnote\CounterRatesInvalidStoreAddressFootnoteViewModel.cs" />
     <Compile Include="Carriers\BestRate\Footnote\ShippingAccountRequiredForRatingFootnoteViewModel.cs" />
+    <Compile Include="Carriers\Dhl\API\DhlExpressLabelClientFactory.cs" />
+    <Compile Include="Carriers\Dhl\API\IDhlExpressLabelClient.cs" />
+    <Compile Include="Carriers\Dhl\API\IDhlExpressLabelClientFactory.cs" />
+    <Compile Include="Carriers\Dhl\API\ShipEngine\DhlExpressShipEngineDownloadedLabelData.cs" />
+    <Compile Include="Carriers\Dhl\API\ShipEngine\DhlExpressShipEngineLabelClient.cs" />
+    <Compile Include="Carriers\Dhl\API\Stamps\DhlExpressStampsLabelClient.cs" />
+    <Compile Include="Carriers\Dhl\API\Stamps\DhlExpressStampsWebClient.cs" />
+    <Compile Include="Carriers\Dhl\API\Stamps\IDhlExpressStampsWebClient.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressAccountManager.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressAccountDescription.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressAccountRepository.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressBestRateBroker.cs" />
-    <Compile Include="Carriers\Dhl\DhlExpressLabelClientFactory.cs" />
-    <Compile Include="Carriers\Dhl\DhlExpressShipEngineDownloadedLabelData.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressPrefetchProvider.cs" />
-    <Compile Include="Carriers\Dhl\DhlExpressShipEngineLabelClient.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressShipmentServicesBuilder.cs" />
     <Compile Include="Carriers\Dhl\DhlExpressShippingProfileApplicationStrategy.cs" />
-    <Compile Include="Carriers\Dhl\DhlExpressStampsLabelClient.cs" />
-    <Compile Include="Carriers\Dhl\DhlExpressStampsWebClient.cs" />
-    <Compile Include="Carriers\Dhl\IDhlExpressLabelClient.cs" />
-    <Compile Include="Carriers\Dhl\IDhlExpressLabelClientFactory.cs" />
-    <Compile Include="Carriers\Dhl\IDhlExpressStampsWebClient.cs" />
     <Compile Include="Carriers\FedEx\Api\FedExOpenShipGateway.cs" />
     <Compile Include="Carriers\FedEx\Api\FedExShippingClerk.cs" />
     <Compile Include="Carriers\FedEx\Api\FedExShippingClerkFactory.cs" />
@@ -754,7 +754,6 @@
     <Analyzer Include="..\..\packages\System.Security.Cryptography.Hashing.Algorithms.Analyzers.1.1.0\analyzers\dotnet\cs\System.Security.Cryptography.Hashing.Algorithms.Analyzers.dll" />
     <Analyzer Include="..\..\packages\System.Security.Cryptography.Hashing.Algorithms.Analyzers.1.1.0\analyzers\dotnet\cs\System.Security.Cryptography.Hashing.Algorithms.CSharp.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
