--- a/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
+++ b/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
@@ -181,6 +181,8 @@
     <Compile Include="Carriers\BestRate\BestRateShipmentPreProcessorTest.cs" />
     <Compile Include="Carriers\BestRate\BestRateShippingProfileApplicationStrategyTest.cs" />
     <Compile Include="Carriers\DefaultShipmentDateManipulator.cs" />
+    <Compile Include="Carriers\DhlExpress\API\DhlExpressLabelClientFactoryTest.cs" />
+    <Compile Include="Carriers\DhlExpress\API\Stamps\DhlExpressStampsLabelClientTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressDownloadedLabelDataTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressLabelServiceTest.cs" />
     <Compile Include="Carriers\DhlExpress\DhlExpressPackageAdapterTest.cs" />
