--- a/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
+++ b/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
@@ -586,6 +586,10 @@
       <Project>{D9FBA556-68E0-4961-A400-636A9A6BC7BC}</Project>
       <Name>ShipWorks.SqlServer</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ShipWorks.ThirdPartyApi\ShipWorks.ThirdPartyApi.csproj">
+      <Project>{0406CA21-03B7-4BF0-AEB3-993C7BE208B9}</Project>
+      <Name>ShipWorks.ThirdPartyApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ShipWorks.UI\ShipWorks.UI.csproj">
       <Project>{1f6a1dc6-dd72-4279-8747-6789f83711ff}</Project>
       <Name>ShipWorks.UI</Name>
