--- a/Code/ShipWorks.UI/ShipWorks.UI.csproj
+++ b/Code/ShipWorks.UI/ShipWorks.UI.csproj
@@ -302,6 +302,7 @@
     <Compile Include="ValueConverters\BooleanToIntConverter.cs" />
     <Compile Include="ValueConverters\BooleanToGridRowHeightConverter.cs" />
     <Compile Include="ValueConverters\BooleanLambdaConverter.cs" />
+    <Compile Include="ValueConverters\BooleanToSolidColorBrushConverter.cs" />
     <Compile Include="ValueConverters\BooleanToStringConverter.cs" />
     <Compile Include="ValueConverters\SectionLayoutVisibilityConverter.cs" />
     <Compile Include="ValueConverters\VisibilityMultiConverter.cs" />
