--- a/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
+++ b/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
@@ -376,10 +376,12 @@
     </Compile>
     <Compile Include="Settings\BestRateAccountSettingsViewModel.cs" />
     <Compile Include="Settings\BestRateCarrier.cs" />
+    <Compile Include="Settings\OneBalance\IOneBalanceAccountHelper.cs" />
     <Compile Include="Settings\OneBalance\IOneBalanceAutoFundControlViewModel.cs" />
     <Compile Include="Settings\OneBalance\IOneBalanceSettingsControlViewModel.cs" />
     <Compile Include="Settings\OneBalance\IOneBalanceAddMoneyDialog.cs" />
     <Compile Include="Settings\OneBalance\IOneBalanceShowSetupWizardViewModel.cs" />
+    <Compile Include="Settings\OneBalance\OneBalanceAccountHelper.cs" />
     <Compile Include="Settings\OneBalance\OneBalanceAddMoneyDialog.xaml.cs">
       <DependentUpon>OneBalanceAddMoneyDialog.xaml</DependentUpon>
     </Compile>
